Revision history for Perl extension WWW::Mechanize

1.21_03     Sat Oct  7 01:21:46 CDT 2006

[THINGS THAT MAY BREAK YOUR CODE]
*   The methods $mech->form() and $mech->follow() have been removed.
    They've been deprecated since 1.10, which was released in Feb 2005.

[ENHANCEMENTS]
*   I'm trying to nail down what seems to be a memory leak on long-running
    Mech programs.  I'm stringifying URI::URL objects wherever I can.

[INTERNALS]
*   No longer uses UNIVERSAL.


1.21_02     Wed Oct  4 13:14:30 CDT 2006

[ENHANCEMENTS THAT MAY BREAK YOUR CODE]

*   The $mech->stack_depth() setting had no way to say "don't cache any
    pages at all".  How silly!

    Now, if you set $mech->stack_depth(0), no history of pages will be kept.
    In the past, it would mean "Keep all pages."  This means that if you want
    to set it to keep all pages, set it to some ridiculously large number.

[DOCUMENTATION]
*   The docs previously refered to Compress::Gzip instead of Compress::Zlib.


1.21_01 Mon Sep 18 17:18:43 CDT 2006

[ENHANCEMENTS]
*   If Compress::Zlib is installed, gzipped content is now
    accepted and transparently decoded. No additional syntax needed!
    This should save time and bandwidth in a number of cases.
    (Mark Stosberg)

*   Added a put() method.  It also calls a subfunction called
    _SUPER_put that will be removed once LWP::UserAgent supports put().



1.20   Sat Aug 19 09:09:08 EDT 2006

        [ENHANCEMENTS]
        * Added new two-argument form of credentials() method.
          $mech->credentials($username, $password);
          That provides simpler visiting of password-protected
          resources in the vast majority of cases and still
          allows the other cases to be supported. (Peter Scott)

        [BUG FIXES]
        * autocheck no longer is triggered when informational
          responses are returned. (Mark Stosberg)

        [INTERNALS]
        * test suite no longer fails when Test::Warn is missing. 